Install Plugin for Webpack

--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
   },
   "homepage": "https://github.com/arnondora/wordpress-paper-theme#readme",
   "devDependencies": {
+    "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.4",
+    "style-loader": "^0.17.0",
     "webpack": "^2.5.1"
+  },
+  "dependencies": {
+    "materialize-css": "^0.98.2"
   }
 }
