--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-copy": "^1.0.0",
     "gulp-rev": "^7.1.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
