Fix Project Name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "papertheme3",
+  "name": "papertheme-redux",
   "version": "3.0.0",
   "description": "Paper Theme for blog wordpress.",
   "main": "index.js",
